tests/paczka1/fuzzy1/46575669.err
Error in line 2: I9JUOc S566 92,9
Error in line 4: I9JUOc A156 78,3
Error in line 5: LDdEDT A407 97,4
Error in line 22: A156 S71} 4},6
Error in line 17: 8BKEg90 A407 37,0
Error in line 31: A156 S566 45,6
